# mango-chat

./: alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: df1179ad420f_add_messages_table.py  e9a7b49c4090_add_channel_user_channel_and_update_.py  f095e4ed559d_initial_migration.py
app/: app.py
app/controller/: channel_controller.py  message_controller.py  user_controller.py
app/dependencies/: auth.py
app/enum/: message_type.py
app/models/: channel.py  message.py  user.py  user_channel.py
app/router/: auth_router.py  channel_router.py  message_router.py  user_router.py
app/schemas/: message_schema.py  response_schema.py  user_schema.py
app/services/: database.py  jwt_service.py
